# AILongTermMemPj

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: app.py  session_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
memorystore/: chroma.sqlite3
src/: __init__.py
src/agents/: Agent.py  __init__.py  message_dto.py  message_enum.py
src/memory/: __init__.py  base_mem.py  combined_mem.py  combined_mem_extracted.py  constant.py  long_mem.py  no_mem.py  short_mem.py  short_mem_extracted.py
test/: conversation_tests.json  conversation_tests.json.example  conversation_tests.json.example2  conversation_tests_consistency.json
