[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-long-term-mem"
version = "0.1.0"
description = "AI Agent with pluggable long/short-term memory strategies"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
run-agent-tests = "main:run"

[tool.ruff]
line-length = 88
target-version = "py311"
